--- a/css/socials.css
+++ b/css/socials.css
@@ -62,7 +62,7 @@ BUT ONLY WHEN THE PARENT ELEMENT IS HOVERED/FOCUSED */
 
   /* Makes social links visible */
   .social-content-image-left {
-    border: 2px dashed Highlight;
+    border: 2px dotted LinkText;
     transition: 
       border 0.1s;
   }
